<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="@color/green"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/profile_image_round" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comp_name"
            android:textSize="45sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/motto"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.2"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/welcome"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/welcome_back"
            android:textSize="35sp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/login_prompt"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account"
            android:textFontWeight="400"
            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            tools:targetApi="p" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_email_or_phone"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_prompt">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress|phone"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/poppins"
                android:textSize="17sp"
                android:paddingVertical="18dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:fontFamily="@font/poppins"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:paddingVertical="18dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusTopStart="15dp"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <TextView
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/remember_me"
            android:textFontWeight="400"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/smalltext"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toTopOf="@+id/checkBox"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/checkBox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_bn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="25dp"
            android:paddingVertical="8dp"
            android:text="@string/log_in"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/header_bg"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            tools:layout_editor_absoluteX="30dp" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_bn" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/transparent"
            android:scaleType="fitCenter"
            android:src="@raw/fingerprint_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:contentDescription="@string/fingerprint" />

        <TextView
            android:id="@+id/signup_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/signup_prompt"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            style="@style/TextAppearance.AppCompat.Headline"/>
    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>