<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DashActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <View
            android:id="@+id/header_background"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/dash_header_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_appbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/transparent"
            android:contentDescription="@string/menu_bar"
            android:scaleType="fitCenter"
            android:src="@raw/menu_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/farmers_panel"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        <ImageButton
            android:id="@+id/pfp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent"
            android:contentDescription="@string/menu_bar"
            android:scaleType="fitCenter"
            android:src="@drawable/person"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:cardCornerRadius="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:layout_editor_absoluteX="20dp">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:queryHint="hello"
                android:searchIcon="@drawable/search" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:layout_editor_absoluteX="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="4dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:backgroundTint="@color/white"
                            android:padding="10dp"
                            android:src="@raw/agenda" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/farmers_panel"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/lorem_ipsum"
                    android:textColor="#666666" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottom_nav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:labelVisibilityMode="labeled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:menu="@menu/bottom_nav_menu" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/main_nav_host"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:name="androidx.navigation.fragment.NavHostFragment"
                    android:layout_weight="1"
                    app:defaultNavHost="true"
                    app:navGraph="@navigation/nav_graph"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bottom_nav"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>